Update Card-component styling to be able to wrap whole card as a link correctly, and add hover to title

--- a/component-library/app/components/Card/Card.module.scss
+++ b/component-library/app/components/Card/Card.module.scss
@@ -5,6 +5,9 @@
     display: flex;
     flex-direction: column;
     background: $purple-20;
+    position: relative;
+
+    height: 100%;
 }
 
 .Link {
@@ -14,12 +17,12 @@
     bottom: 0;
     left: 0;
     cursor: pointer;
-    //TODO: fix so that it is set relative to list 
-    width: 0; 
-    height: 0; 
+    width: 100%; 
+    height: 100%; 
 
     &:hover ~ .Content .Title { 
-        color: $purple;    
+        color: $purple;
+        text-decoration: underline 2px solid $purple;
     }
 }
 
@@ -61,6 +64,7 @@
 
     flex: 0 0 auto;
     transition: 0.3s color; 
+    width: fit-content; 
 }
 
 .Text {
